# mdivide

./: CHANGELOG.md  Cargo.toml  README-jp.md  README.md
.github/workflows/: release.yaml
data/: filelist.txt  test1.md  test2.md  test3.md  test4.md  test5.md
docs/: CHANGELOG.txt  README.txt
src/: error.rs  lib.rs  main.rs
src/utils/: file.rs  mod.rs  prepare.rs  processor.rs
