[package]
name = "mdivide"
version = "0.1.1"
edition = "2024"
#
authors = ["Michimoto Katase <mkatase@gmail.com>"]
license = "MIT"
description = "A line-based multi-language divider for Markdown"
repository = "https://github.com/mkatase/mdivide"
readme = "README.md"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
